# demo-c-project

./: .gitignore  AI_TESTING_WORKFLOWS_README.md  README.md
.github/workflows/: ai-test-execution.yml  ai-test-generation.yml  test-trigger.yml  test-workflows.yml
build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_test/src/: temp_sensor.c
build_test/tests/: test_temp_converter.c
src/: main.c  temp_converter.c
tests/: test_main.c  test_temp_converter.c  test_temp_sensor.c
tests/compilation_report/: test_temp_sensor_compiles_yes.txt
tests/coverage_reports/: cmd_line  index-sort-f.html  index-sort-l.html  index.functions.html  index.html  index.temp_converter.c.c04890bbb40a428bd3b18f45cdcb357b.html  index.temp_sensor.c.01a41cd30aaf387bf01789a341f18b1c.html
tests/coverage_reports/src/: index-sort-f.html  index-sort-l.html  index.html  temp_converter.c.func-c.html  (+5 more)
tests/test_reports/: test_temp_converter.exe_report.txt  test_temp_converter_report.txt  test_temp_sensor.exe_report.txt  test_temp_sensor_report.txt
tests/verification_report/: test_main_compiles_no.txt  test_main_compiles_yes.txt  test_temp_converter_compiles_no.txt  test_temp_converter_compiles_yes.txt  test_temp_sensor_compiles_no.txt
tests_new/: test_main.c  test_temp_converter.c  test_temp_sensor.c
tests_new/verification_report/: test_main_compiles_no.txt  test_temp_converter_compiles_no.txt  test_temp_converter_compiles_yes.txt  test_temp_sensor_compiles_no.txt  test_temp_sensor_compiles_yes.txt
